--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -50,7 +50,7 @@
   --color-text-light: #a0a0a0;
 
   --color-border: #1a1a2e;
-  --color-white: #ffffff;
+  --color-white: gray;
   --color-black: #000000;
 
   --shadow-color: rgba(0, 0, 0, 0.5);
